@@ -1,5 +1,7 @@
 2007-05-17  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* gnome-settings-daemon.c: declare module types registration functions.
+
 	* gnome-settings-screensaver.c: use correct parent for
 	GnomeSettingsModuleScreensaverClass.
 
